--- a/src/app.css
+++ b/src/app.css
@@ -30,13 +30,13 @@ h2 {
 
 a {
 	font-weight: 500;
-	color: #646cff;
-	text-decoration: inherit;
+	color: inherit;
+	text-decoration: none;
 }
 
-a:hover {
+/* a:hover {
 	color: #535bf2;
-}
+} */
 
 body {
 	min-width: 320px;
@@ -52,7 +52,7 @@ button {
 	font-family: inherit;
 	background-color: #1a1a1a;
 	cursor: pointer;
-	transition: border-color 0.25s;
+	transition: border-color 0.25s, scale 250ms, box-shadow 250ms;
 }
 /* button:hover {
     border-color: #646cff;
@@ -62,14 +62,20 @@ button:focus-visible {
 	outline: 4px auto -webkit-focus-ring-color;
 }
 
+button:hover {
+	box-shadow: 0px 0px 5px 1px rgba(0, 121, 255, 0.7);
+	scale: 1.05;
+	transition: scale 250ms, box-shadow 250ms;
+}
+
 @media (prefers-color-scheme: light) {
 	:root {
 		color: #213547;
 		background-color: #ffffff;
 	}
-	a:hover {
+	/* a:hover {
 		color: #747bff;
-	}
+	} */
 	button {
 		background-color: #f9f9f9;
 	}
