--- a/src/app.css
+++ b/src/app.css
@@ -34,7 +34,7 @@ a {
 	text-decoration: none;
 }
 
-/* a:hover {
+/* a:hover {§
 	color: #535bf2;
 } */
 
@@ -71,18 +71,4 @@ button:hover {
 	box-shadow: 0px 0px 5px 1px rgba(0, 121, 255, 0.7);
 	scale: 1.05;
 	transition: scale 250ms, box-shadow 250ms;
-}
-
-@media (prefers-color-scheme: light) {
-	:root {
-		color: #213547;
-		background-color: #ffffff;
-	}
-
-	/* a:hover {
-		color: #747bff;
-	} */
-	button {
-		background-color: #f9f9f9;
-	}
 }
